--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,9 +1,3 @@
-.body {
-  background-color: rgb(40, 42, 58);
-  color: rgb(198, 151, 73);
-  height: 100vh;
-}
-
 .title {
   margin: 0;
   padding: 1rem;
